--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.4",
     "@types/three": "^0.157.2",
     "leva": "^0.9.35",
+    "maath": "^0.10.4",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
