--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.88.5",
     "@react-three/fiber": "^8.15.4",
     "@types/three": "^0.157.2",
+    "clsx": "^2.1.0",
     "leva": "^0.9.35",
     "next": "13.5.5",
     "react": "^18",
